--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ streamlit==1.34.0
 tensorflow-cpu==2.12.0
 Pillow==10.3.0
 numpy==1.24.3
+pip uninstall tensorflow tensorflow-cpu pillow numpy streamlit -y
+pip install -r requirements.txt
